# KLIDE

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Design.md  GOAL_LOOP_DESIGN.md  HAIKU.md  HARNESS_CONTRACT.md  Ideas.md  KLIDE_HARNESS_SCHEMA.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  v0.5_AGENT_OPERATIONS.md  vite.config.ts
.agents/: todos.json
.agents/todos/: mqiczu37ij1242.json  mqief3w6qemco6.json  orch-t2-2.json
.github/workflows/: ci.yml
scripts/: verify-bundle.sh
scripts/prompt-ab/: run.mts
src/: App.tsx  agentHandoff.ts  contextTray.ts  customCli.ts  customProviders.ts  delegateStatusNotify.ts  delegates.ts  diffComments.test.ts  diffComments.ts  errors.ts  favModels.ts  gitGraph.ts  gitTypes.ts  gridLayouts.ts  klideConvos.ts  layouts.ts  main.tsx  memory.ts  memoryDrafts.ts  memorySearch.test.ts  memorySearch.ts  modelBrand.tsx  monaco-setup.ts  panelLayout.ts  persistedStore.ts  races.test.ts  races.ts  runInspection.test.ts  runInspection.ts  runLedger.test.ts  runLedger.ts  runs.test.ts  runs.ts  settingsStore.test.ts  settingsStore.ts  shortcuts.ts  skills.ts  tasks.test.ts  tasks.ts  tauriEvents.test.ts  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accounts.rs  adapters.rs  custom_cli.rs  custom_providers.rs  git.rs  lib.rs  local_servers.rs  main.rs  memory.rs  missions.rs  models.rs  pricing.rs  providers.rs  pty.rs  pty_client.rs  pty_daemon.rs  pty_host.rs  search.rs  skills.rs  workspace.rs  worktree_setup.rs
src-tauri/src/agent/: command_allowlist.rs  eval.rs  evidence.rs  failure_budget.rs  mod.rs  network_allowlist.rs  permission.rs  run_core.rs  steering.rs  todo.rs  tools.rs  transcripts.rs  types.rs
src-tauri/src/delegate/: chat.rs  claude_code.rs  codex.rs  mod.rs  omp.rs  opencode.rs  runs.rs  status.rs
src-tauri/src/git/: github.rs  mod.rs
src/agent/: advisor.ts  advisorConsult.ts  budgetLedger.ts  capacityPlanner.ts  client.ts  dispatcher.ts  durableMissions.test.ts  durableMissions.ts  fanout.ts  foldEvents.ts  goalLoop.ts  goalLoopDemo.ts  missionChain.test.ts  missionChain.ts  missionGraph.test.ts  missionGraph.ts  missionHarness.ts  orchestration.ts  orchestrator.ts  orchestratorFixture.ts  planner.ts  providers.test.ts  providers.ts  race.test.ts  race.ts  reducer.ts  routingPolicy.test.ts  routingPolicy.ts  runProjection.ts  subagents.ts  tools.ts  types.ts  validationContracts.ts
src/components/: ActivityBar.tsx  ActivityHeatmap.tsx  AiPanel.tsx  AnchoredWorkbench.tsx  ArtifactInspector.tsx  CheckpointPanel.tsx  ClaudeCodePanel.tsx  CommandPalette.tsx  ContextMenu.tsx  DiffModal.tsx  DiffViewerPanel.tsx  EditorArea.tsx  EditorDockSpine.tsx  FileViewerPanel.tsx  FloatingPanel.tsx  FocusMode.tsx  GitHistoryGraph.tsx  GitPanel.tsx  GitReview.tsx  GridLayoutBuilder.tsx  GridWorkbench.tsx  HoverPopover.tsx  ImageView.tsx  InlineCommandReview.tsx  InlineDiffCard.tsx  InlineDiffReview.tsx  Kbd.tsx  KeyboardShortcuts.tsx  LayoutBento.tsx  LayoutCanvas.tsx  MemoryModal.tsx  MemoryPanel.tsx  MissionControl.tsx  MissionGraph.tsx  OrchestratorConsole.tsx  OrchestratorConsolePrototype.tsx  OrchestratorPreview.tsx  ProfileModal.tsx  ProjectGraphPanel.tsx  SearchPanel.tsx  (+17 more)
src/components/ai/: ChatMessage.tsx  ConversationHistory.tsx  DelegateTerminal.tsx  MessageActions.tsx  ModelPicker.tsx  RaceFollowUpBar.tsx  conversationSession.test.ts  conversationSession.ts  eventsToMsgs.ts  icons.tsx  markdown.tsx  panelHost.test.ts  panelHost.ts  summarize.ts  system-prompt.ts  tool-execution.ts  transcriptReducer.test.ts  transcriptReducer.ts  turnDriver.test.ts  turnDriver.ts  types.ts  utils.ts  workspaceFiles.ts
src/components/settings/: accounts.tsx  apiKeys.tsx  controls.tsx  customProviders.tsx  icons.tsx  localServers.tsx  stats.tsx
src/hooks/: useAiPanelFleet.test.ts  useAiPanelFleet.ts  useArtifactInspector.ts  useEditorTabs.ts  useFlipIndicator.ts  usePanelLayout.ts  usePortalMenu.ts
src/ipc/: aiProviders.test.ts  aiProviders.ts
src/styles/: tokens.css
