[package]
name = "klide"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "klide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
tauri-plugin-fs = { version = "2.5.1", features = ["watch"] }
tauri-plugin-dialog = "2.7.1"
portable-pty = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
# Secrets live in the OS keychain, never a plaintext store. `apple-native`
# selects the macOS Keychain backend; add windows-native / sync-secret-service
# when those platforms are targeted.
keyring = { version = "3", features = ["apple-native"] }
# Read OpenCode's session DB directly. OpenCode stores its history in SQLite
# (opencode.db) and doesn't expose a JSON list API; shelling out to
# `opencode session list` only returns a text table with no timestamps. The
# `bundled` feature ships its own libsqlite3 so the user doesn't need a
# separate system install.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
