[package]
name = "klide"
version = "0.5.0"
description = "A local-first agent IDE"
authors = ["Pierre Prudh"]
edition = "2021"
default-run = "klide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "klide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1.1"
# Account-snapshot identity: decode JWT claims (id_token) and fingerprint API
# keys. Both already in the dependency tree (transitive), promoted to direct.
base64 = "0.22"
getrandom = "0.3"
sha2 = "0.10"
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
tauri-plugin-dialog = "2.7.1"
portable-pty = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
# Secrets live in the OS keychain, never a plaintext store. `apple-native`
# selects the macOS Keychain backend; add windows-native / sync-secret-service
# when those platforms are targeted.
keyring = { version = "3", features = ["apple-native"] }
# Read OpenCode's session DB directly. OpenCode stores its history in SQLite
# (opencode.db) and doesn't expose a JSON list API; shelling out to
# `opencode session list` only returns a text table with no timestamps. The
# `bundled` feature ships its own libsqlite3 so the user doesn't need a
# separate system install.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Post-edit syntax verification for Rust files: `syn::parse_file` gives a fast,
# in-process parse with no toolchain spawn. JSON is checked via serde_json.
syn = { version = "2", features = ["full"] }
# Loopback listener for delegate status hooks (delegate/status.rs): CLI
# lifecycle hooks curl a tiny POST at Klide instead of Klide scraping TUI
# output. Small sync server — one thread, no framework.
tiny_http = "0.12"
